@startuml

title Iterator パターン

'クラスとコメント
interface Iterator {
    {abstract} hasNext()
    {abstract} next()
}
note top of Iterator
    要素を順番にスキャンしていく
    インターフェースを定める.
end note

interface Aggregate {
    {abstract} iterator(): Iterator
}
note top of Aggregate
    Iteratorを作り出す
    インターフェースを定める.
end note

class SampleAggregate {
    + iterator() : SampleAggregateIterator
}
note bottom of SampleAggregate
    Aggregate を実際に実装するクラス.
    SampleAggregateIterator を作り出す.
end note

class SampleAggregateIterator {
    hasNext()
    next()
}
note bottom of SampleAggregateIterator
    Iterator を実際に実装するクラス.
    スキャンする為に必要な情報
    (要素の集合, 注目する要素の場所)をもつ.
end note

'関係
Aggregate -> Iterator : Create >
Aggregate <|.. SampleAggregate
Iterator <|.. SampleAggregateIterator
SampleAggregate -o SampleAggregateIterator

@enduml
